cơ bản đã tạm phần API